unpackaged/main/default/objects/Cost_Period_Line_Item__c/Cost_Period_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Cost Period Line Item</label>
    <nameField>
        <label>Cost Period Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Period Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>