unpackaged/main/default/objects/Cost_Period_Line_Item__c/fields/Cost_Period__c.field-meta.xml
<CustomField>
    <fullName>Cost_Period__c</fullName>
    <label>Cost Period</label>
    <referenceTo>Cost_Period__c</referenceTo>
    <relationshipLabel>Cost Period Line Items</relationshipLabel>
    <relationshipName>Cost_Period_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>