unpackaged/main/default/objects/Cost_Period_Line_Item__c/fields/Cost_Period_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cost_Period_Notes__c</fullName>
    <label>Cost Period Notes</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>