unpackaged/main/default/objects/Cost_Period_Line_Item__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>