unpackaged/main/default/objects/Cost_Period_Line_Item__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person Requesting the Part</description>
    <inlineHelpText>Enter who is requesting the Part</inlineHelpText>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cost_Period_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>