unpackaged/main/default/objects/Cost_Period_Line_Item__c/fields/Requester_Department__c.field-meta.xml
<CustomField>
    <fullName>Requester_Department__c</fullName>
    <formula>Requester__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Department</label>
    <type>Text</type>
</CustomField>