unpackaged/main/default/objects/Cost_Period_Line_Item__c/fields/Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cost Period Line Items</relationshipLabel>
    <relationshipName>Cost_Period_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>