unpackaged/main/default/objects/Cost_Period_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Cost_Period__c</columns>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>Cost_Period_Notes__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Cost__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>