unpackaged/main/default/objects/Cost_Period_Line_Item__c/listViews/Cost_Period_Line_Items.listView-meta.xml
<ListView>
    <fullName>Cost_Period_Line_Items</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Cost Period Line Items</label>
</ListView>