unpackaged/main/default/objects/Cost_Period_Line_Item__c/listViews/Go_Expedi_Orders.listView-meta.xml
<ListView>
    <fullName>Go_Expedi_Orders</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Cost_Period__c</columns>
    <columns>NAME</columns>
    <columns>Cost__c</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Cost_Period_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>GXP</value>
    </filters>
    <label>Go Expedi Orders</label>
</ListView>